--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -7,7 +7,7 @@ spring:
       pool-name: plataforma-database-pool
       auto-commit: false
       connection-timeout: 30000
-    url: "jdbc:postgresql://0.0.0.0:5432/asset_tracking_database"
+    url: "jdbc:postgresql://host.docker.internal:5432/asset_tracking_database"
     username: postgres
     password: 123
     type: com.zaxxer.hikari.HikariDataSource
